unpackaged/main/default/objects/TVStation__c/TVStation__c.object-meta.xml
<CustomObject>
    <description>This describes the TV stations related to TFNs for our TV marketing channel</description>
    <label>TV Station</label>
    <nameField>
        <displayFormat>TV-{00000000}</displayFormat>
        <label>TV Station Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TV Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>