unpackaged/main/default/objects/TVStation__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>This is the campaign that is related to the TFN or, in other words, what mass tort is this related to!</description>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>