unpackaged/main/default/objects/TVStation__c/fields/CreativeLength__c.field-meta.xml
<CustomField>
    <fullName>CreativeLength__c</fullName>
    <description>This represents the length of the TV that relates the TFN to the TV station. It is represented as :xx to show seconds; xx:xx to show min and seconds; and xx:xx:xx to show hours, min, and seconds per ad</description>
    <label>Creative Length</label>
    <length>8</length>
    <type>Text</type>
</CustomField>