unpackaged/main/default/objects/TVStation__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Date the ad ended</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>