unpackaged/main/default/objects/TVStation__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The date the ad started</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>