unpackaged/main/default/objects/TVStation__c/fields/TFN__c.field-meta.xml
<CustomField>
    <fullName>TFN__c</fullName>
    <description>This represents the toll-free number (TFN) related to the TV station we advertise on</description>
    <label>TFN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>