unpackaged/main/default/objects/TVStation__c/fields/TVStation__c.field-meta.xml
<CustomField>
    <fullName>TVStation__c</fullName>
    <description>This is the tv station that aired an ad with an associated TFN</description>
    <label>TV Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>