unpackaged/main/default/objects/TVStation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TVStation__c</columns>
    <columns>CreativeLength__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>TFN__c</columns>
    <columns>CampaignName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>